create Nav search bar

--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -35,14 +35,38 @@
 }
 
 .navCenter {
-    
+    display: flex;
+    align-items: center;
 }
 
-.navRight {
-    
-}
+.navRight {}
 
 .navSvg {
     height: 32px;
     width: 32px;
+}
+
+.navSearchForm {
+    display: flex;
+    align-items: center;
+    background: rgba(22, 24, 35, 0.1);
+    border-radius: 10px;
+    overflow: hidden;
+    padding: 10px;
+    width: 24rem;
+}
+
+.navSearch {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 14px;
+    width: 30rem;
+    border: none;
+    background: transparent;
+    outline: none;
+    padding: 0;
+    caret-color: #2ba0ff;
+    appearance: textfield;
+    z-index: 10;
 }
