--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -39,7 +39,10 @@
     align-items: center;
 }
 
-.navRight {}
+.navRight {
+    display: flex;
+    align-items: center;
+}
 
 .navSvg {
     height: 32px;
@@ -69,4 +72,28 @@
     caret-color: #2ba0ff;
     appearance: textfield;
     z-index: 10;
+}
+
+.loginBtn {
+    min-width: 100px;
+    background-color: #2ba0ff;
+    color: #fff;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 200;
+    font-size: 20px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 6px 8px;
+}
+
+.loginBtn:hover {
+    background-color: #2095f5;
+}
+
+.loginBtn:active {
+    background-color: #0f8cf2;
 }
