--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -11,6 +11,7 @@
     display: flex;
     width: 100%;
     height: 100%;
+    max-width: 1100px;
     justify-content: space-between;
     padding-right: 24px;
     padding-left: 20px;
