add Main page design

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -1,3 +1,60 @@
+.containerBlock {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
 .mainContainer {
-  
+    margin-top: 60px;
+    display: flex;
+    width: 100vw;
+    max-width: 1100px;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    align-self: center;
+    flex: 1 1 auto;
+}
+
+.mainWrapper {}
+
+.mainLeft {}
+
+.mainLeftContainer {
+    overflow: hidden auto;
+    overscroll-behavior-y: contain;
+    perspective: 1px;
+    transform-style: preserve-3d;
+    perspective-origin: right top;
+    top: 60px;
+    bottom: 0px;
+    width: 356px;
+    background: rgb(255, 255, 255);
+    position: fixed;
+    z-index: 99;
+    padding-right: 8px;
+}
+
+.mainLeftWrapper {
+    flex-shrink: 0;
+    padding: 20px 0px 26px 8px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    min-height: 100%;
+}
+
+.leftMain {
+    margin-bottom: 8px;
+    padding: 0px;
+}
+
+.mainRight {}
+
+.separator {
+    height: 1px;
+    width: 100%;
+    background: rgba(22, 24, 35, 0.12);
 }
