--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -5,6 +5,8 @@
     height: 60px;
     width: 100%;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+    z-index: 100;
+    position: relative;
 }
 
 .navWrapper {
