--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -58,6 +58,10 @@
     padding: 0px;
 }
 
+.leftSection {
+    padding: 0px 8px;
+}
+
 .leftLogin {
     display: flex;
     flex-direction: column;
@@ -97,7 +101,6 @@
 
 .leftTitle {
     font-family: 'Bebas Neue', cursive;
-    padding: 0px 8px;
     margin-bottom: 8px;
     font-size: 16px;
     line-height: 20px;
@@ -122,6 +125,7 @@
     background: rgba(22, 24, 35, 0.12);
 }
 
-.trend {
+.trendsWrapper {
+    display: flex;
     
 }
