--- a/src/styles/SideItem/SideItem.module.css
+++ b/src/styles/SideItem/SideItem.module.css
@@ -32,12 +32,13 @@
 
 .featuredItemWrapper {
     display: flex;
-    flex-direction: column;
+    align-items: center;
     color: #000;
     text-decoration: none;
     border-radius: 4px;
     transition: background 200ms ease-in-out;
     margin-bottom: 1rem;
+    padding: 0.25rem;
 }
 
 .featuredItemHeader {
@@ -69,4 +70,16 @@
 
 .sideItemSubheader {
 
+}
+
+.featuredItemTitle {
+    display: flex;
+    flex-direction: column;
+}
+
+.profileImg {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
 }
