add responsive design changes

--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -100,3 +100,9 @@
 .loginBtn:active {
     background-color: #0f8cf2;
 }
+
+@media (max-width: 750px) {
+    .navCenter {
+        max-width: 20rem;
+    }
+}
