--- a/src/styles/LoginModal/LoginModal.module.css
+++ b/src/styles/LoginModal/LoginModal.module.css
@@ -27,3 +27,98 @@
     -webkit-box-align: center;
     align-items: center;
 }
+
+.loginModalContainer {
+    border-radius: 8px;
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+    transform: none;
+    margin: auto;
+    position: relative;
+    max-height: 800px;
+    height: 70%;
+    overflow: hidden;
+    background-color: rgb(255, 255, 255);
+    z-index: 1001;
+}
+
+.loginModalWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 483px;
+    height: 100%;
+    padding: 48px 48px 0 48px;
+}
+
+.loginModalWrapper > h2 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 600;
+    letter-spacing: 1.25px;
+    font-size: 30px;
+    padding: 0;
+    margin: 0;
+}
+
+.loginList {
+    flex: 1 1 0%;
+    overflow: auto;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    margin-top: 14px;
+}
+
+.loginItem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: 'Oswald', sans-serif;
+    color: rgb(22, 24, 35);
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    padding: 0px 12px;
+    height: 44px;
+    position: relative;
+    cursor: pointer;
+    margin-bottom: 16px;
+    word-break: keep-all;
+    white-space: nowrap;
+    background: rgb(255, 255, 255);
+}
+
+.loginItem > h3 {
+    font-weight: 400;
+    font-size: 14px;
+}
+
+.registerWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(22, 24, 35);
+    font-family: 'Oswald', sans-serif;
+    height: 64px;
+    border-top: 1px solid rgba(22, 24, 35, 0.12);
+    width: 100%;
+}
+
+.registerWrapper > h3 {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+}
+
+.spanSeparator {
+    width: 4px;
+}
+
+.registerSpan {
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 400;
+    color: #2095f5;
+}
+
+.registerSpan:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
