--- a/src/styles/LoginModal/LoginModal.module.css
+++ b/src/styles/LoginModal/LoginModal.module.css
@@ -26,6 +26,7 @@
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .loginModalContainer {
@@ -33,11 +34,11 @@
     transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
     transform: none;
     margin: auto;
-    position: relative;
     max-height: 800px;
     height: 70%;
     overflow: hidden;
     background-color: rgb(255, 255, 255);
+    position: relative;
     z-index: 1001;
 }
 
@@ -45,7 +46,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 483px;
+    width: 475px;
     height: 100%;
     padding: 48px 48px 0 48px;
 }
@@ -105,6 +106,7 @@
     font-size: 16px;
     line-height: 18px;
     font-weight: 400;
+    letter-spacing: 0.25px;
 }
 
 .spanSeparator {
@@ -121,4 +123,79 @@
 .registerSpan:hover {
     cursor: pointer;
     text-decoration: underline;
+}
+
+.inputContainer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.5rem;
+    transition: all 0.3s ease 0s;
+}
+
+.inputContainer > h3 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    font-size: 16px;
+    margin: 0;
+    padding: 8px 0;
+}
+.inputContainer > h4 {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    font-size: 14px;
+    margin: 0;
+    padding: 8px 0;
+    color: rgba(22, 24, 35, 0.75);
+    cursor: pointer;
+}
+
+.inputContainer > h4:hover{
+    text-decoration: underline;
+}
+
+.loginForm {
+    width: 475px;
+    padding: 1rem 4rem;
+    flex: 1 1;
+}
+
+.loginInput {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    letter-spacing: 0.75px;
+    background: rgba(22, 24, 35, 0.06);
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 2px;
+    padding-inline-start: 12px;
+    color: rgb(22, 24, 35);
+    line-height: 100%;
+    outline: none;
+    font-size: 16px;
+    height: 44px;
+    caret-color: rgb(254, 44, 85);
+    width: 100%;
+    padding-inline-end: unset;
+}
+
+.passwordInput {
+    
+}
+
+.loginFormSubmit {
+    margin: 1rem 0;
+    width: 100%;
+    background-color: #2ba0ff;
+    color: #fff;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 200;
+    font-size: 20px;
+    height: 35px;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 6px 8px;
 }
