--- a/src/styles/LoginModal/LoginModal.module.css
+++ b/src/styles/LoginModal/LoginModal.module.css
@@ -174,7 +174,7 @@
     outline: none;
     font-size: 16px;
     height: 44px;
-    caret-color: rgb(254, 44, 85);
+    caret-color: #2095f5;
     width: 100%;
     padding-inline-end: unset;
 }
