--- a/src/styles/SideItem/SideItem.module.css
+++ b/src/styles/SideItem/SideItem.module.css
@@ -5,6 +5,7 @@
     text-decoration: none;
     border-radius: 4px;
     transition: background 200ms ease-in-out;
+    padding: 1px 0;
 }
 
 .sideItemWrapper:hover {
@@ -83,3 +84,12 @@
     border-radius: 50%;
     object-fit: cover;
 }
+
+.selected {
+    color: #2ba0ff;
+    
+}
+
+/*.selected:hover {
+    background: transparent !important;
+}*/
