--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -22,6 +22,7 @@
 .navLeft {
     display: flex;
     align-items: center;
+    min-width: 300px;
 }
 
 .navLeft a {
@@ -40,11 +41,14 @@
 .navCenter {
     display: flex;
     align-items: center;
+    min-width: 300px;
 }
 
 .navRight {
     display: flex;
     align-items: center;
+    min-width: 300px;
+    justify-content: flex-end;
 }
 
 .navSvg {
@@ -82,15 +86,15 @@
     background-color: #2ba0ff;
     color: #fff;
     font-family: 'Bebas Neue', cursive;
-    font-weight: 200;
-    font-size: 20px;
-    height: 35px;
+    font-size: 15px;
+    height: 36px;
     justify-content: center;
     align-items: center;
     border: none;
-    border-radius: 4px;
+    border-radius: 2px;
     cursor: pointer;
     padding: 6px 8px;
+    letter-spacing: 0.25px;
 }
 
 .loginBtn:hover {
@@ -99,6 +103,43 @@
 
 .loginBtn:active {
     background-color: #0f8cf2;
+}
+
+.uploadBtn {
+    margin: 0 1.25rem 0 0;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 15px;
+    position: relative;
+    height: 36px;
+    color: rgba(22, 24, 35, 1);
+    min-width: 110px;
+    padding: 0 16px;
+    height: 36px;
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 2px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 1);
+    cursor: pointer;
+    letter-spacing: 0.25px;
+}
+
+.uploadBtn:hover {
+    background: rgba(244, 244, 244, 0.726);
+}
+
+.uploadBtn:active {
+    background: rgba(235, 235, 235, 0.726);
 }
 
 .profileBtn {
@@ -204,6 +245,43 @@
     width: 100%;
     background: rgba(22, 24, 35, 0.12);
     margin: 8px 0;
+}
+
+.uploadBtn {
+    margin: 0 1.25rem 0 0;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 15px;
+    position: relative;
+    height: 36px;
+    color: rgba(22, 24, 35, 1);
+    min-width: 110px;
+    padding: 0 16px;
+    height: 36px;
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 2px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 1);
+    cursor: pointer;
+    letter-spacing: 0.25px;
+}
+
+.uploadBtn:hover {
+    background: rgba(244, 244, 244, 0.726);
+}
+
+.uploadBtn:active {
+    background: rgba(235, 235, 235, 0.726);
 }
 
 @media (max-width: 750px) {
