--- a/src/styles/Navbar/Navbar.module.css
+++ b/src/styles/Navbar/Navbar.module.css
@@ -6,7 +6,7 @@
     width: 100%;
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
     z-index: 100;
-    position: relative;
+    position: fixed;
     background-color: #fff;
 }
 
