--- a/src/styles/Post/Post.module.css
+++ b/src/styles/Post/Post.module.css
@@ -32,7 +32,7 @@
 .postProfileContainer {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 .profileMeta {
@@ -44,8 +44,8 @@
 }
 
 .postProfile > img {
-    width: 56px;
-    height: 56px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     object-fit: cover;
 }
@@ -57,6 +57,7 @@
     line-height: 25px;
     display: inline-block;
     margin: 0 4px 0 0;
+    letter-spacing: 0.5px;
 }
 
 .profileName {
@@ -73,7 +74,11 @@
 }
 
 .postMediaVideoContainer {
-    height: calc(450px + (100vw - 768px) / 1152 * 100);
+    width: calc(0.56 * (475px + ((100vw - 768px) / 1152) * 100));
+    height: calc(475px + ((100vw - 768px) / 1152) * 100);
+    background-color: rgb(0, 0, 0);
+    object-fit: cover;
+    border-radius: 4px;
 }
 
 .postMediaVideoContainer > video {
@@ -185,7 +190,7 @@
     align-items: center;
     border-radius: 4px;
     cursor: pointer;
-    padding: 0.75rem 1.5rem;
+    padding: 14px 1.5rem;
     transition: background-color 200ms ease-in-out;
 }
 
