--- a/src/styles/Upload/Upload.module.css
+++ b/src/styles/Upload/Upload.module.css
@@ -14,6 +14,9 @@
     padding-top: 16px;
     padding-bottom: 16px;
     background-color: rgb(248, 248, 248);
+    top: 60px;
+    position: relative;
+    bottom: 0px;
 }
 
 .uploadWrapper {
@@ -23,6 +26,7 @@
     border-radius: 8px;
     background-color: rgb(255, 255, 255);
     padding: 24px 40px;
+    z-index: 99;
 }
 
 .uploadTitleContainer {
@@ -57,13 +61,15 @@
     margin: 0 0 0 4rem;
 }
 
-.uploadCaption > h3, .uploadAccessControls > h3, .uploadAllowanceControls > h3 {
+.uploadCaption>h3,
+.uploadAccessControls>h3,
+.uploadAllowanceControls>h3 {
     font-family: 'Oswald', sans-serif;
     font-weight: 400;
     margin: 14px 0;
 }
 
-.uploadCaption > input {
+.uploadCaption>input {
     min-height: 46px;
     width: 100%;
     position: relative;
@@ -74,7 +80,7 @@
     margin-bottom: 12px;
 }
 
-.uploadAccessControls > select {
+.uploadAccessControls>select {
     width: 300px;
     height: 36px;
     border: 1px solid rgba(22, 24, 35, 0.12);
@@ -105,7 +111,7 @@
     min-height: 24px;
 }
 
-.uploadCheckbox > input {
+.uploadCheckbox>input {
     margin-right: 10px;
 }
 
@@ -117,7 +123,7 @@
     margin-top: 2rem;
 }
 
-.uploadSubmitControls > button {
+.uploadSubmitControls>button {
     text-decoration: none;
     font-family: 'Bebas Neue';
     font-size: 18px;
@@ -145,15 +151,15 @@
     letter-spacing: 0.25px;
 }
 
-.uploadSubmitControls > button:hover {
+.uploadSubmitControls>button:hover {
     background: rgba(244, 244, 244, 0.726);
-} 
+}
 
-.uploadSubmitControls > button:active {
+.uploadSubmitControls>button:active {
     background: rgba(235, 235, 235, 0.726);
 }
 
-.uploadSubmitControls > button:nth-child(1) {
+.uploadSubmitControls>button:nth-child(1) {
     margin-right: 3rem;
 }
 
@@ -182,7 +188,7 @@
     font-family: 'Oswald', sans-serif;
 }
 
-.previewTitle > h2 {
+.previewTitle>h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -190,14 +196,14 @@
     margin: 16px 0 0 0;
 }
 
-.previewTitle > h3 {
+.previewTitle>h3 {
     color: rgba(22, 24, 35, 0.5);
     text-align: center;
     font-weight: 400;
     margin-top: 6px;
 }
 
-.uploadPreview > svg {
+.uploadPreview>svg {
     height: 40px;
     width: 40px;
 }
@@ -247,4 +253,38 @@
 
 .invalid {
     border: 1px solid rgb(255 0 0 / 30%) !important;
+}
+
+.loaderContainer {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    background: rgb(201 201 201 / 31%);
+    z-index: 100;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: transparent;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
