add styling changes to container block

--- a/src/styles/main.module.css
+++ b/src/styles/main.module.css
@@ -1,8 +1,7 @@
 .containerBlock {
     min-height: 100vh;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .mainContainer {
