--- a/src/styles/BigPost/BigPost.module.css
+++ b/src/styles/BigPost/BigPost.module.css
@@ -1,6 +1,6 @@
 .postContainer {
   display: flex;
-  z-index: 100;
+  z-index: 1000;
   position: fixed;
   top: 0;
   right: 0;
@@ -23,7 +23,7 @@
     height: 100%;
     overflow: hidden;
     position: relative;
-    background-color: rgba(22, 24, 35, 0.06);
+    background-color: rgba(22, 24, 35, 0.07);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -40,6 +40,110 @@
 }
 
 .postRightWrapper {
+    flex: 0 0 550px;
+    width: 550px;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem 0px 0px;
+    background-color: #fff;
+}
+
+.postProfileWrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+    position: relative;
+    padding: 2rem;
+}
+
+.postUserWrapper {
+    cursor: pointer;
+    display: flex;
+}
+
+.avatar > img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.profileMeta {
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+}
+
+.profileUsername {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 12px;
+    display: inline-block;
+    margin: 4px 4px 12px 0;
+    letter-spacing: .70px;
+}
+
+.nameMeta {
+    display: flex;
+    align-items: center;
+    line-height: 14px;
+}
+
+.nameMeta > span {
+    display: flex;
+    align-items: center;
+    margin: 0 6px;
+    height: 100%;
+}
+
+.nameMeta > h4 {
+    margin: 0;
+    padding: 0;
+    font-size: 14px;
+    white-space: nowrap;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    letter-spacing: .5px;
+}
+
+.profileName {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 300;
+    font-size: 14px;
+    letter-spacing: .5px;
+}
+
+
+.followBtnWrapper {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.postFollowBtn {
+    display: flex;
+    color: #2ba0ff;
+    background-color: transparent;
+    border: 1px solid #2ba0ff;
+    font-family: 'Bebas Neue', cursive;
+    font-weight: 200;
+    font-size: 18px;
+    height: 28px;
+    width: 100px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 16px 8px;
+    transition: background-color 200ms ease-in-out;
+}
+
+.postFollowBtn:hover {
+    background-color: #2ba0ff21;
 }
 
 .exitBtn {
