add styling to BigPost component

--- a/src/styles/BigPost/BigPost.module.css
+++ b/src/styles/BigPost/BigPost.module.css
@@ -174,7 +174,7 @@
 }
 
 .postSound {
-    margin-top: 24px;
+    margin-top: 12px;
     display: flex;
     align-items: center;
     padding: 0 2rem;
@@ -198,6 +198,195 @@
 .soundCaption:hover {
     text-decoration: underline;
     cursor: pointer;
+}
+
+.postControls {
+    display: flex;
+    justify-content: space-between;
+    margin: 28px 0;
+    padding: 0 2rem;
+}
+
+.postControlGroup {
+    display: flex;
+}
+
+.postControlGroupItem {
+    display: flex;
+    align-items: center;
+    margin-right: 18px;
+}
+
+.postControlGroupItem > h3 {
+    margin: 0;
+    padding: 0;
+    font-size: 12px;
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+    color: rgba(22, 24, 35, .75);
+}
+
+.likeBtn, .commentBtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    font-size: 0px;
+    border-radius: 50%;
+    transition: all 200ms ease-in-out 0s;
+    background-color: rgba(22, 24, 35, 0.06);
+    padding: 6px;
+    border: none;
+    cursor: pointer;
+    margin-right: 6px;
+}
+
+.likeBtn:hover {
+    background-color: rgba(22, 24, 35, 0.15);
+}
+
+.likeBtn:active {
+    background-color: rgba(22, 24, 35, 0.35);
+}
+
+.likeBtn > svg {
+    width: 22px;
+    height: 22px;
+}
+
+.commentBtn > svg {
+    width: 18px;
+    height: 18px;
+}
+
+.postCommentsWrapper {
+    width: 100%;
+    padding: 24px 32px;
+    box-sizing: border-box;
+    background-color: rgb(248, 248, 248);
+    border-top: 1px solid rgba(22, 24, 35, 0.2);
+    border-bottom: 1px solid rgba(22, 24, 35, 0.2);
+    overflow: hidden auto;
+    -webkit-box-flex: 1;
+    flex-grow: 1;
+    position: relative;
+    font-family: 'Oswald', sans-serif;
+}
+
+.commentWrapper {
+
+}
+
+.commenterWrapper {
+    display: flex;
+}
+.commentMeta {
+    display: flex;
+    flex-direction: column;
+    margin: 0 12px;
+}
+
+.commenter {
+    font-weight: 500;
+    letter-spacing: 0.75px;
+    font-size: 18px;
+    cursor: pointer;
+}
+
+.commenter:hover {
+    text-decoration: underline;
+}
+
+.comment {
+    font-weight: 300;
+    letter-spacing: 0.5px;
+    font-size: 14px;
+}
+
+.commentMetaControls {
+    display: flex;
+    align-items: center;
+}
+
+.commentTimestamp {
+    margin-right: 1rem;
+}
+
+.commentTimestamp > h3 {
+    font-family: 'Oswald', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    color: rgba(22, 24, 35, 0.5);
+}
+
+.commentReplyBtn {
+    font-family: 'Oswald', sans-serif;
+    border: none;
+    background: none;
+    letter-spacing: 0.5px;
+    font-weight: 400;
+    font-size: 12px;
+    cursor: pointer;
+    text-align: center;
+    color: rgba(22, 24, 35, 0.5);
+}
+
+.commentReplyBtn:hover {
+    text-decoration: underline;
+}
+
+.commentMeta > * {
+    margin-bottom: 6px;
+}
+
+
+.addCommentsWrapper {
+    flex: 0 0 auto;
+    background-color: rgb(255, 255, 255);
+    margin: 0px 30px;
+    padding: 21px 0px;
+    display: flex;
+}
+
+.commentInput {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.5px;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    background-color: rgba(22, 24, 35, 0.06);
+    box-sizing: border-box;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    padding: 8px 9px;
+    width: 100%;
+    outline: none;
+}
+
+.postCommentBtn {
+    font-family: 'Oswald', sans-serif;
+    font-weight: 500;
+    letter-spacing: 0.5px;
+    border: none;
+    background: none;
+    margin-left: 14px;
+    color:#2ba0ff;
+    cursor: pointer;
+}
+
+.postCommentBtn:hover {
+    color:#2594ef;
+}
+
+.postCommentBtnds:active {
+    color:#1380d8;
 }
 
 .exitBtn {
