--- a/src/styles/BigPost/BigPost.module.css
+++ b/src/styles/BigPost/BigPost.module.css
@@ -68,6 +68,13 @@
     object-fit: cover;
 }
 
+.replyAvatar > img {
+    width: 28px;
+    height: 28px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
 .profileMeta {
     display: flex;
     flex-direction: column;
@@ -267,7 +274,7 @@
     background-color: rgb(248, 248, 248);
     border-top: 1px solid rgba(22, 24, 35, 0.2);
     border-bottom: 1px solid rgba(22, 24, 35, 0.2);
-    /* overflow: hidden auto; */
+    overflow: hidden auto;
     -webkit-box-flex: 1;
     flex-grow: 1;
     position: relative;
@@ -276,8 +283,13 @@
 
 .commentWrapper {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
     margin-bottom: 12px;
+}
+
+.commenterContainer {
+    display: flex;
+    justify-content: space-between;
 }
 
 .manageCommentBtn {
@@ -310,17 +322,26 @@
 }
 
 .manageComment > ul {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border-radius: 6px;
+    list-style: none;
+}
+
+.manageComment > ul > li {
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 10px;
     list-style: none;
+    border-radius: 6px;
 }
 
-.manageComment > li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+.manageComment > ul > li:hover {
+    background-color: #f5f5f5;
 }
-
 
 .commenterWrapper {
     display: flex;
@@ -386,6 +407,22 @@
 
 .commentMeta > * {
     margin-bottom: 6px;
+}
+
+.replyWrapper {
+    display: flex;
+    margin: 8px 2rem;
+}
+
+.replyUsername {
+    font-weight: 500;
+    letter-spacing: 0.75px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.replyUsername:hover {
+    text-decoration: underline;
 }
 
 
