--- a/src/styles/BigPost/BigPost.module.css
+++ b/src/styles/BigPost/BigPost.module.css
@@ -262,6 +262,21 @@
     height: 22px;
 }
 
+.liked {
+    background-color: #2ba0ff;
+}
+
+.liked + h3 {
+    color: #2ba0ff;
+}
+
+.liked > svg {
+    fill: #fff;
+    stroke: #fff;
+}
+
+
+
 .commentBtn > svg {
     width: 18px;
     height: 18px;
