--- a/src/styles/Profile/Profile.module.css
+++ b/src/styles/Profile/Profile.module.css
@@ -29,8 +29,9 @@
 .profileHeaderWrapper {
   display: flex;
   justify-content: space-between;
-  margin: 1rem 0;
-  box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
+  border-bottom: 2px rgba(255, 255, 255, 1) solid;
+  box-shadow: 0px 1px 0px 0px rgb(0 0 0 / 12%);
+  margin-bottom: 2rem;
 }
 
 .avatar {
@@ -55,6 +56,11 @@
   margin: 0;
   display: flex;
   align-items: center;
+  
+}
+
+.headerCenterControls > a {
+  text-decoration: none;
 }
 
 .editProfileBtn {
