--- a/src/styles/Upload/Upload.module.css
+++ b/src/styles/Upload/Upload.module.css
@@ -1,4 +1,6 @@
 .mainUpload {
+    position: absolute;
+    left: 0;
     width: 100vw;
     height: 100vh;
     background-color: rgb(248, 248, 248);
