--- a/src/styles/EditProfile/EditProfile.module.css
+++ b/src/styles/EditProfile/EditProfile.module.css
@@ -8,14 +8,192 @@
 }
 
 .editWrapper {
-    width: 1250px;
+    display: flex;
+    width: 1200px;
     height: 100%;
     overflow-y: hidden;
     margin: 0px auto;
     margin-top: 100px;
-    padding-top: 16px;
     padding-bottom: 16px;
     background-color: #fff;
-    border-radius: 8px;
+    border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+
+.editLeftWrapper {
+    margin-top: 25px;
+    overflow: hidden auto;
+    overscroll-behavior-y: contain;
+    perspective: 1px;
+    transform-style: preserve-3d;
+    perspective-origin: right top;
+    width: 225px;
+    height: 100%;
+    /* border-right: 1px solid rgba(27, 31, 35, 0.15); */
+}
+
+.tabsList {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    border-radius: 6px;
+
+}
+
+.tabItem {
+    padding: 6px 0;
+    margin: 0;
+    margin-left: 14px;
+    cursor: pointer;
+    position: relative;
+    list-style: none;
+    border-radius: 4px;
+    /* color: #fdfdfd;
+    background-color: #74bfff; */
+}
+
+.tabSelected {
+    background-color: #f0f0f0;
+}
+
+.tabSelected::after{
+    content: "";
+    background-color: #2ba0ff;
+    border-radius: 6px;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: -8px;
+    width: 4px;
+}
+
+.tabItem > h3 {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-weight: 700;
+    font-size: 14px;
+    margin: 0;
+    margin-left: 24px;
+}
+
+.editRightWrapper {
+    margin-top: 50px;
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.settingsContainer {
+    margin: 0 75px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.settingsHeader {
+    width: 100%;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-weight: 700;
+    font-size: 28px;
+    margin: 0;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.settingsBody {
+    padding: 22px 0;
+    width: 100%;
+    height: 100%;
+}
+
+.settingsGroup {
+    width: 100%;
+    height: auto;
+    display: flex;
+}
+
+.settingsSubgroup {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.settingsItem {
+    width: auto;
+    margin-bottom: 1rem;
+}
+
+.settingsWidth100{
+    width: 100%;
+}
+
+.settingsMarginLeft {
+    margin-left: 2rem;
+}
+
+.settingsPosition {
+    position: relative;
+    height: fit-content;
+}
+
+.settingsLabel {
+    width: 100%;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-weight: 700;
+    font-size: 16px;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.settingsAvatar {
+    width: 175px;
+    height: 175px;
+    cursor: pointer;
+}
+
+.settingsEditAvatarBtn {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px, rgb(209, 213, 219) 0px 0px 0px 1px inset;
+    border-radius: 4px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 6px 18px;
+    font-size: 12px;
+    font-weight: 600;
+    background-color: #fff;
+    cursor: pointer;
+    z-index: 100;
+}
+
+.settingsEditAvatarBtn:hover {
+    background-color: #f1f1f1;
+}
+
+.settingsEditAvatarBtn:active {
+    background-color: #e6e6e6;
+}
+
+.settingsInput {
+    width: 100%;
+    position: relative;
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 4px;
+    outline: none;
+    padding: 8px;
+    margin-bottom: 12px;
+}
+
+.settingsTextarea {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    width: 100%;
+    height: 4rem;
+    position: relative;
+    border: 1px solid rgba(22, 24, 35, 0.12);
+    border-radius: 4px;
+    outline: none;
+    padding: 8px;
+    margin-bottom: 12px;
+    resize: none;
 }
