--- a/src/styles/EditProfile/EditProfile.module.css
+++ b/src/styles/EditProfile/EditProfile.module.css
@@ -197,3 +197,36 @@
     margin-bottom: 12px;
     resize: none;
 }
+
+.submitProfile {
+    text-decoration: none;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 500;
+    position: relative;
+    border: 1px solid rgba(240,246,252,0.1);
+    height: 32px;
+    width: 132px;
+    border: none;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background:#2ba0ff;
+    color: #fff;
+    cursor: pointer;
+}
+
+.submitProfile:hover {
+    background:#1c98fd;
+}
+
+.submitProfile:active {
+    background:#068fff;
+}
+
+.submitProfileInactive {
+    color: #f1f1f1;
+    background-color: #2ba0ffa8 !important;
+    cursor: default;
+}
