--- a/src/styles/EditProfile/EditProfile.module.css
+++ b/src/styles/EditProfile/EditProfile.module.css
@@ -193,6 +193,18 @@
     margin-bottom: 12px;
 }
 
+.settingsInputError {
+    border: 1px solid #ffa4a4;
+}
+
+.settingsInputErrorMessage {
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 12px;
+    font-weight: 400;
+    color: #ff3a3a;
+
+}
+
 .settingsTextarea {
     font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
     width: 100%;
