--- a/src/styles/EditProfile/EditProfile.module.css
+++ b/src/styles/EditProfile/EditProfile.module.css
@@ -147,6 +147,8 @@
 }
 
 .settingsAvatar {
+    border-radius: 50%;
+    box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
     width: 175px;
     height: 175px;
     cursor: pointer;
