--- a/src/styles/Explore/Explore.module.css
+++ b/src/styles/Explore/Explore.module.css
@@ -3,15 +3,20 @@
   margin: 0px auto;
   position: relative;
   min-width: 420px;
+  width: 675px;
   top: 60px;
   position: relative;
   bottom: 0px;
 }
 
+.exploreWrapper {
+
+}
+
 .exploreTabsWrapper {
   flex: 1 1 auto;
-  padding: 16px 24px 67px 16px;
-  width: 800px;
+  padding: 16px;
+  width: 675px;
   display: flex;
   justify-content: center;
 }
@@ -20,7 +25,7 @@
   content: "";
   position: absolute;
   bottom: 0px;
-  right: 12px;
+  right: 0;
   left: 0px;
   border-bottom: 1px solid rgba(22, 24, 35, 0.12);
   transform: scaleY(0.5);
@@ -59,4 +64,5 @@
 .exploreBody {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
 }
