add tag search functionality

--- a/src/styles/Post/Post.module.css
+++ b/src/styles/Post/Post.module.css
@@ -156,6 +156,11 @@
     letter-spacing: 0.15px;
 }
 
+.caption > a {
+    text-decoration: none;
+    color: black;
+}
+
 .hashtag {
     font-weight: 400;
 }
